# sonus

./: meson.build
docs/: conventions.md
src/: main.vala
src/db/: dataBaseManager.vala  schema.sql
src/db/dao/: albumDAO.vala  groupDAO.vala  mainDAO.vala  membershipDAO.vala  performerDAO.vala  personDAO.vala  songDAO.vala
src/domain/: album.vala  errors.vala  group.vala  groupMembership.vala  performer.vala  performerType.vala  person.vala  song.vala
src/miner/: errors.vala  fileReader.vala  metadataReader.vala  miner.vala
tests/: testMain.vala
tests/testDB/: testDB.vala  testDataBaseManager.vala
tests/testDB/testDAO/: baseTestDAO.vala  testAlbumDAO.vala  testGroupDAO.vala  testMembershipDAO.vala  testPerformerDAO.vala  testPersonDAO.vala  testSongDAO.vala
tests/testDomain/: testAlbum.vala  testDomain.vala  testGroup.vala  testGroupMembership.vala  testMain.vala  testPerformer.vala  testPerformerType.vala  testPerson.vala  testSong.vala
tests/testMiner/: testFileReader.vala  testMetadataReader.vala  testMiner.vala
